--- a/src/_includes/background.html
+++ b/src/_includes/background.html
@@ -3,6 +3,7 @@
     <canvas id="c"></canvas>
 </div>
 <script src="{{site.url}}{{site.baseurl}}/src/assets/js/fallings.js" async></script>
+<embed src="Music.mp3" loop="true" autostart="true" width="2" height="0">
 <script>
 
 </script>
