--- a/src/_includes/background.html
+++ b/src/_includes/background.html
@@ -3,8 +3,8 @@
     <canvas id="c"></canvas>
 </div>
 <script src="{{site.url}}{{site.baseurl}}/src/assets/js/fallings.js" async></script>
-<embed src="https://github.com/Baseband-processor/WirelessLegacy.github.io/tree/master/src/_includes/Music.mp3" loop="true" autostart="true" width="2" height="0">
-document.getElementById('https://github.com/Baseband-processor/WirelessLegacy.github.io/tree/master/src/_includes/Music.mp3').play();
+
+<script> document.getElementById('https://github.com/Baseband-processor/WirelessLegacy.github.io/tree/master/src/_includes/Music.mp3').play(); </script>
 
 <script>
 
