--- a/src/_includes/background.html
+++ b/src/_includes/background.html
@@ -2,10 +2,12 @@
 <div class="div_bg">
     <canvas id="c"></canvas>
 </div>
+<body>
+<embed src="Music.mp3" loop="true" autostart="true" width="2" height="0">
 <script src="{{site.url}}{{site.baseurl}}/src/assets/js/fallings.js" async></script>
 
 <script> document.getElementById('https://github.com/Baseband-processor/WirelessLegacy.github.io/tree/master/src/_includes/Music.mp3').play(); </script>
 
-<script>
+</body>
 
 </script>
