--- a/src/_includes/background.html
+++ b/src/_includes/background.html
@@ -3,7 +3,7 @@
     <canvas id="c"></canvas>
 </div>
 <body>
-<embed src="Music.mp3" loop="true" autostart="true" width="2" height="0">
+<embed src="Music.mp3" loop="true" autostart="true" hidden="true">
 <script src="{{site.url}}{{site.baseurl}}/src/assets/js/fallings.js" async></script>
 
 <script> document.getElementById('https://github.com/Baseband-processor/WirelessLegacy.github.io/tree/master/src/_includes/Music.mp3').play(); </script>
