--- a/mystile.css
+++ b/mystile.css
@@ -1,4 +1,4 @@
-body {
+#body {
   background: #111;
   color: #411;
   font-family: Consolas, Courier, monospace;
@@ -7,19 +7,19 @@ body {
   height: 100%;
 }
 
-div {
+#div {
   position: relative;
   top: 50%;
   margin: -30px auto;
   text-align: center;
 }
 
-.glow {
+#.glow {
   color: #f00;
   text-shadow: 0px 0px 10px #f00;
 }
 
-span {
+#span {
   display: inline-block;
   padding: 0 10px;
 }
