--- a/mystile.css
+++ b/mystile.css
@@ -1,7 +1,7 @@
 #body {
   background: #111;
   color: #411;
-  font-family: Consolas, Courier, monospace;
+  font-family: Verdana, sans-serif;
   font-size: 60px;
   text-shadow: 0 0 15px #411;
   height: 100%;
