--- a/src/_sass/abstracts/_fonts.scss
+++ b/src/_sass/abstracts/_fonts.scss
@@ -1,11 +1,7 @@
-// fonts
-@font-face {
-    font-family: "Fira Code Online";
-    src: url("../fonts/FiraCode-Regular.woff");
-  }
+
 
 // font family
-$font-serif: Georgia, Times, serif, "Source-Han-Sans-Medium", "PingFang SC",
+$font-serif: Verdana, Geneva, sans-serif, "Source-Han-Sans-Medium", "PingFang SC",
   "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei" !default;
 $font-sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif, "Source-Han-Sans-Medium",
