--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -6,6 +6,7 @@
     <div class="container" id="ctner">
       {% include collection_list.html %}  
       {% include header.html %}
+      {% include window.html %}
       <div class="div_article" id="div_atcl">       
         <article id="main_atcl" itemscope itemtype="http://schema.org/BlogPosting">
           {{content}}
