--- a/src/_sass/_black_n_green.scss
+++ b/src/_sass/_black_n_green.scss
@@ -18,6 +18,7 @@
 @import "components/post_list";
 @import "components/toc";
 @import "components/comment";
+@import "components/window";
 // layout
 @import "layouts/global";
 
