--- a/src/_includes/window.html
+++ b/src/_includes/window.html
@@ -1,3 +1,3 @@
-<div class="popup" onclick="myFunction()">Click me!
-  <span class="popuptext" id="myPopup">Popup text...</span>
+<div class="popup" onclick="myFunction()">About the author!
+  <span class="popuptext" id="myPopup"></span>
 </div>
