--- a/src/_includes/window.html
+++ b/src/_includes/window.html
@@ -1,3 +1,10 @@
-<div class="popup" onclick="myFunction()">About the author!
-  <span class="popuptext" id="myPopup"></span>
+<div id="container">
+  <div class="link">Hover me now !
+    <span class="tip">
+      Some few text here<br><br>
+      Let's try something else<br><br>
+      And adding more info here too<br><br>
+      And even a bit more here also
+      </span>
+  </div>
 </div>
