--- a/src/_includes/window.html
+++ b/src/_includes/window.html
@@ -1,7 +1,7 @@
 </head>
 <body>
 
-<button class="About the Author" onclick="openForm()">Open Form</button>
+<button class="open-button" onclick="openForm()">About the Author</button>
 
 <div class="form-popup" id="whoami">
 </div>
