--- a/src/_includes/window.html
+++ b/src/_includes/window.html
@@ -1,4 +1,4 @@
-</head>
+<!-- </head>
 <body>
 
 <button class="open-button" onclick="openForm()">About the Author</button>
@@ -8,3 +8,4 @@
 
 </body>
 </html>
+-->
